--- a/package.json
+++ b/package.json
@@ -20,7 +20,12 @@
     "@angular/router": "^16.2.0",
     "@auth0/angular-jwt": "^5.2.0",
     "@fortawesome/fontawesome-free": "^6.5.1",
+    "angular-datepicker": "^1.0.5",
     "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.1",
+    "jquery": "^3.7.1",
+    "ng2-charts": "^5.0.4",
+    "ng2-datepicker": "^12.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
@@ -29,6 +34,7 @@
     "@angular-devkit/build-angular": "^16.2.9",
     "@angular/cli": "^16.2.9",
     "@angular/compiler-cli": "^16.2.0",
+    "@types/chart.js": "^2.9.41",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
