--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "chart.js": "^4.4.1",
     "jquery": "^3.7.1",
     "ng2-charts": "^5.0.4",
+    "ng2-date-picker": "^17.0.0",
     "ng2-datepicker": "^12.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
