--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^17.1.2",
     "@auth0/angular-jwt": "^5.2.0",
     "@fortawesome/fontawesome-free": "^6.5.1",
+    "@popperjs/core": "^2.11.8",
     "angular-datepicker": "^1.0.5",
     "bootstrap": "^5.3.2",
     "chart.js": "^4.4.1",
