--- a/package.json
+++ b/package.json
@@ -26,13 +26,12 @@
     "@popperjs/core": "^2.11.8",
     "angular-datepicker": "^1.0.5",
     "bootstrap": "^5.3.2",
-    "chart.js": "^4.4.1",
+    "chart.js": "^2.9.3",
     "jquery": "^3.7.1",
-    "ng2-charts": "^5.0.4",
     "ng2-charts": "^2.4.2",
     "ng2-date-picker": "^17.0.0",
     "ng2-datepicker": "^12.0.0",
-    "rxjs": "~7.8.0",
+    "rxjs": "^7.8.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
